--- a/data-ingestion/ingest-workflow.ipynb
+++ b/data-ingestion/ingest-workflow.ipynb
@@ -90,90 +90,150 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "866e9a27-6fd5-4746-838a-17d6d8d04414",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from kfp.dsl import component, InputPath, OutputPath\n",
-    "import json\n",
-    "import pandas as pd\n",
-    "import os\n",
-    "from llama_stack_client import LlamaStackClient\n",
-    "from llama_stack.apis.vector_dbs import VectorDB\n",
-    "from llama_stack.apis.vector_io import Chunk"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "b9e794b5-e462-4bc4-b2a2-9173528b5f85",
    "metadata": {},
    "outputs": [],
    "source": [
+    "from kfp import dsl\n",
+    "from kfp.dsl import component, Input, InputPath, Output, OutputPath\n",
+    "import os\n",
+    "import json\n",
+    "from llama_stack_client import LlamaStackClient\n",
+    "from llama_stack_client.types import Document as LlamaStackDocument\n",
+    "\n",
+    "from docling.document_converter import DocumentConverter, PdfFormatOption\n",
+    "from docling.datamodel.base_models import InputFormat\n",
+    "from docling.datamodel.pipeline_options import PdfPipelineOptions\n",
+    "from docling_core.transforms.chunker.hybrid_chunker import HybridChunker\n",
+    "from docling_core.types.doc.labels import DocItemLabel\n",
+    "\n",
+    "\n",
     "@component(\n",
     "    base_image=\"python:3.10\",\n",
-    "    packages_to_install=[\"pdfplumber\", \"numpy\", \"pymupdf\", \"llama-stack-client==0.1.9\", \"pandas\", \"llama-stack\", \"httpx\", \"numpy\", \"psycopg2\", \"sentence-transformers\", \"huggingface_hub==0.14.1\"]\n",
+    "    packages_to_install=[\n",
+    "        \"llama-stack-client==0.1.9\",\n",
+    "        \"docling\",\n",
+    "        \"docling-core\"\n",
+    "    ]\n",
     ")\n",
     "def chunk_embed_and_store(\n",
     "    input_file: InputPath(),\n",
-    "):\n",
-    "    from llama_stack_client import LlamaStackClient\n",
-    "    from llama_stack_client import Agent, AgentEventLogger, RAGDocument\n",
-    "    import pandas as pd\n",
-    "    from sentence_transformers import SentenceTransformer\n",
-    "    import json\n",
-    "    import os\n",
-    "    from sentence_transformers import SentenceTransformer\n",
-    "    import pdfplumber\n",
-    "    import numpy as np\n",
+    "    llama_stack_url: str = \"http://localhost:8321\",\n",
+    "    embedding_model: str = \"all-MiniLM-L6-v2\",\n",
+    "    embedding_dimension: int = 384,\n",
+    "    provider_id: str = \"pgvector\",\n",
+    "    vector_db_id: str = \"my_document_db\"\n",
+    ") -> int:\n",
+    "    \"\"\"\n",
+    "    Process documents, convert them to chunks, and store in a vector database.\n",
     "    \n",
-    "    print(f\"Reading PDF from: {input_file}\")\n",
-    "    full_text = \"\"\n",
-    "    \n",
-    "    with pdfplumber.open(input_file) as pdf:\n",
-    "        for page in pdf.pages:\n",
-    "            page_text = page.extract_text()\n",
-    "            if page_text:\n",
-    "                full_text += page_text\n",
+    "    Args:\n",
+    "        input_file (InputPath): Path to the document or a JSON file containing document paths\n",
+    "        llama_stack_url (str): URL for the Llama Stack API\n",
+    "        embedding_model (str): Model to use for embeddings\n",
+    "        embedding_dimension (int): Dimension size for embeddings\n",
+    "        provider_id (str): Provider ID for vector database\n",
+    "        vector_db_id (str): ID for the vector database\n",
+    "        \n",
+    "    Returns:\n",
+    "        int: Number of documents processed\n",
+    "    \"\"\"\n",
+    "    # === Step 1: Configure Llama Stack client ===\n",
+    "    client = LlamaStackClient(base_url=llama_stack_url)\n",
     "\n",
-    "    # Cleaning data\n",
-    "    full_text = full_text.encode('utf-8', 'ignore').decode('utf-8')\n",
-    "    full_text = full_text.replace('\\x00', '')\n",
-    "    \n",
-    "    if not full_text.strip():\n",
-    "        raise ValueError(\"No text could be extracted from the PDF.\")\n",
+    "    # === Step 2: Process document path ===\n",
+    "    # The document_path could be a single file or a JSON file with multiple document paths\n",
+    "    documents = []\n",
+    "    if os.path.isfile(input_file):\n",
+    "        # Check if this is a JSON file with a list of document paths\n",
+    "        if input_file.endswith('.json'):\n",
+    "            try:\n",
+    "                with open(input_file, 'r') as f:\n",
+    "                    file_data = json.load(f)\n",
+    "                    if isinstance(file_data, list):\n",
+    "                        documents = file_data\n",
+    "                    elif isinstance(file_data, dict) and 'input_file' in file_data:\n",
+    "                        documents = file_data['input_file']\n",
+    "                    elif isinstance(file_data, dict) and 'documents' in file_data:\n",
+    "                        documents = file_data['documents']\n",
+    "                    else:\n",
+    "                        documents = [input_file]\n",
+    "            except json.JSONDecodeError:\n",
+    "                documents = [input_file]\n",
+    "        else:\n",
+    "            documents = [input_file]\n",
     "\n",
-    "\n",
-    "    rng = np.random.default_rng()\n",
-    "    random_id = rng.integers(1000, 9999)\n",
-    "    \n",
-    "    document = RAGDocument(\n",
-    "        document_id=f\"pdf-{random_id}-1\",\n",
-    "        content=full_text,\n",
-    "        mime_type=\"application/pdf\",\n",
-    "        metadata={\"source\": \"rag-pipeline\", \"filename\": os.path.basename(input_file)},\n",
+    "    # === Step 3: Convert, Chunk, and Prepare Documents ===\n",
+    "    # converter format option for the pictures on pdf to be generated as base64\n",
+    "    pipeline_options = PdfPipelineOptions()\n",
+    "    pipeline_options.generate_picture_images = True\n",
+    "    converter = DocumentConverter(\n",
+    "                format_options={\n",
+    "                    InputFormat.PDF: PdfFormatOption(pipeline_options=pipeline_options)\n",
+    "                }\n",
     "    )\n",
+    "    chunker = HybridChunker()\n",
+    "    llama_documents: list[LlamaStackDocument] = []\n",
+    "    i = 0\n",
     "\n",
+    "    for file_path in documents:\n",
+    "        print(f\"Processing {file_path}...\")\n",
+    "        try:\n",
+    "            docling_doc = converter.convert(source=file_path).document\n",
+    "            chunks = chunker.chunk(docling_doc)\n",
+    "            chunk_count = 0\n",
     "\n",
-    "    client = LlamaStackClient(base_url=\"http://llamastack.llama-stack-rag-2.svc.cluster.local:8321\")\n",
+    "            for chunk in chunks:\n",
+    "                if any(\n",
+    "                    c.label in [DocItemLabel.TEXT, DocItemLabel.PARAGRAPH]\n",
+    "                    for c in chunk.meta.doc_items\n",
+    "                ):\n",
+    "                    i += 1\n",
+    "                    chunk_count += 1\n",
+    "                    llama_documents.append(\n",
+    "                        LlamaStackDocument(\n",
+    "                            document_id=f\"doc-{i}\",\n",
+    "                            content=chunk.text,\n",
+    "                            mime_type=\"text/plain\",\n",
+    "                            metadata={\"source\": file_path},\n",
+    "                        )\n",
+    "                    )\n",
+    "            \n",
+    "        except Exception as e:\n",
+    "            error_message = str(e)\n",
+    "            print(f\"Error processing {file_path}: {error_message}\")\n",
     "\n",
-    "    vector_db_id = \"my_documents_db_1\"\n",
+    "    total_chunks = len(llama_documents)\n",
+    "    print(f\"Total valid documents prepared: {total_chunks}\")\n",
     "\n",
-    "    response = client.vector_dbs.register(\n",
-    "        vector_db_id=\"my_documents_db_1\",\n",
-    "        embedding_model=\"all-MiniLM-L6-v2\",\n",
-    "        embedding_dimension=384,\n",
-    "        provider_id=\"pgvector\",\n",
-    "    )\n",
-    "    print(f\"Vector database registered: {response}\")\n",
-    "    \n",
-    "    print(\"Inserting document using rag_tool...\")\n",
-    "    client.tool_runtime.rag_tool.insert(\n",
-    "        documents=[document],\n",
-    "        vector_db_id=\"my_documents_db_1\",\n",
-    "        chunk_size_in_tokens=512,\n",
-    "    )\n",
-    "    print(\"Document inserted successfully using RAGDocument.\")\n"
+    "    # === Step 4: Create Vector DB ===\n",
+    "    try:\n",
+    "        client.vector_dbs.register(\n",
+    "            vector_db_id=vector_db_id,\n",
+    "            embedding_model=embedding_model,\n",
+    "            embedding_dimension=embedding_dimension,\n",
+    "            provider_id=provider_id,\n",
+    "        )\n",
+    "        print(f\"Vector DB registered successfully: {vector_db_id}\")\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        error_message = str(e)\n",
+    "        print(f\"Failed to register vector DB '{vector_db_id}': {error_message}\")\n",
+    "\n",
+    "    # === Step 5: Insert into Vector DB ===\n",
+    "    try:\n",
+    "        client.tool_runtime.rag_tool.insert(\n",
+    "            documents=llama_documents,\n",
+    "            vector_db_id=vector_db_id,\n",
+    "            chunk_size_in_tokens=512,\n",
+    "        )\n",
+    "        print(\"Documents successfully inserted into the vector DB.\")\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        error_message = str(e)\n",
+    "        print(f\"Error inserting documents into RAG tool: {error_message}\")\n",
+    "\n",
+    "    print(f\"Total chunks inserted into vectordb: {total_chunks}\")\n"
    ]
   },
   {
@@ -205,7 +265,8 @@
     "    )\n",
     "\n",
     "    chunk_and_embed_step = chunk_embed_and_store(\n",
-    "        input_file=fetch_step.outputs[\"output_file\"]\n",
+    "        input_file=fetch_step.outputs[\"output_file\"],\n",
+    "        llama_stack_url=\"<your-llama-stack-url>\"\n",
     "    )\n"
    ]
   },
