--- a/script/data-ingestion-pipeline.ipynb
+++ b/script/data-ingestion-pipeline.ipynb
@@ -8,15 +8,11 @@
    "outputs": [],
    "source": [
     "!pip install --upgrade pip\n",
-    "!pip install boto3 pandas\n",
-    "!pip install docstring-parser==0.7.3 kfp-pipeline-spec==0.6.0 kfp-server-api==2.1.0 kubernetes==8.0.0 protobuf==4.21.1 requests-toolbelt==0.8.0\n",
-    "!pip install llama-stack\n",
-    "!pip install sentence-transformers\n",
+    "!pip install boto3\n",
+    "!pip install kfp\n",
     "!pip install llama-stack-client==0.1.9\n",
-    "!pip install huggingface_hub==0.14.1\n",
-    "!pip install pymupdf\n",
-    "!pip install numpy\n",
-    "!pip install pdfplumber"
+    "!pip install docling\n",
+    "!pip install docling-core"
    ]
   },
   {
@@ -24,7 +20,11 @@
    "id": "d3fce794-07aa-406f-ac77-343747fe6de5",
    "metadata": {},
    "source": [
-    "## Fetch from minIO"
+    "## Ingestion Pipeline\n",
+    "This pipeline executes the following:\n",
+    "- fetches pdf documents from Minio\n",
+    "- chunks and embeds them with docling\n",
+    "- stores the data in Postgres Vector database"
    ]
   },
   {
@@ -88,93 +88,138 @@
     "    base_image=\"python:3.10\",\n",
     "    packages_to_install=[\n",
     "        \"boto3\",\n",
-    "        \"langchain-community\",\n",
-    "        \"pdfminer.six\",\n",
-    "        \"pymupdf\",\n",
-    "        \"pypdf\",\n",
-    "        \"tqdm\",\n",
-    "        \"sentence-transformers\",\n",
-    "        \"huggingface-hub\",\n",
-    "        \"llama-stack-client==0.1.9\",\n",
-    "        \"numpy\",\n",
-    "        \"pdfplumber\"\n",
+    "        \"llama-stack-client==0.1.9\", \n",
+    "        \"docling\",\n",
+    "        \"docling-core\"\n",
     "    ])\n",
-    "def fetch_from_minio_store_pgvector(bucket_name: str, minio_endpoint: str, minio_access_key: str, minio_secret_key: str, llamastack_base_url: str):\n",
+    "def fetch_from_minio_docling_process_store(bucket_name: str, minio_endpoint: str, minio_access_key: str, minio_secret_key: str, llamastack_base_url: str):\n",
     "    import os\n",
     "    import boto3\n",
     "    import tempfile\n",
-    "    import numpy as np\n",
-    "    import pdfplumber\n",
-    "    from llama_stack_client import LlamaStackClient, RAGDocument\n",
+    "    from llama_stack_client import LlamaStackClient\n",
+    "    from llama_stack_client.types import Document as LlamaStackDocument\n",
+    "    \n",
+    "    # Import docling libraries\n",
+    "    from docling.document_converter import DocumentConverter, PdfFormatOption\n",
+    "    from docling.datamodel.base_models import InputFormat\n",
+    "    from docling.datamodel.pipeline_options import PdfPipelineOptions\n",
+    "    from docling_core.transforms.chunker.hybrid_chunker import HybridChunker\n",
+    "    from docling_core.types.doc.labels import DocItemLabel\n",
     "\n",
+    "    # Step 1: Download files from MinIO\n",
     "    temp_dir = tempfile.mkdtemp()\n",
     "    download_dir = os.path.join(temp_dir, \"source_repo\")\n",
     "    os.makedirs(download_dir, exist_ok=True)\n",
     "\n",
+    "    # Connect to MinIO\n",
+    "    print(f\"Connecting to MinIO at {minio_endpoint}\")\n",
     "    s3 = boto3.client(\n",
     "        \"s3\",\n",
     "        endpoint_url=minio_endpoint,\n",
     "        aws_access_key_id=minio_access_key,\n",
-    "        aws_secret_access_key=minio_secret_key\n",
+    "        aws_secret_access_key=minio_secret_key,\n",
+    "        verify=False\n",
     "    )\n",
     "\n",
+    "    # List and download objects\n",
     "    paginator = s3.get_paginator(\"list_objects_v2\")\n",
     "    pages = paginator.paginate(Bucket=bucket_name)\n",
     "\n",
+    "    print(f\"Downloading files from bucket: {bucket_name}\")\n",
+    "    downloaded_files = []\n",
     "    for page in pages:\n",
     "        for obj in page.get(\"Contents\", []):\n",
     "            key = obj[\"Key\"]\n",
     "            file_path = os.path.join(download_dir, os.path.basename(key))\n",
+    "            print(f\"Downloading: {key} -> {file_path}\")\n",
     "            s3.download_file(bucket_name, key, file_path)\n",
-    "\n",
-    "    rag_documents = []\n",
-    "    rng = np.random.default_rng()\n",
-    "    for filename in os.listdir(download_dir):\n",
-    "        if not filename.endswith(\".pdf\"):\n",
+    "            downloaded_files.append(file_path)\n",
+    "    \n",
+    "    print(f\"Downloaded {len(downloaded_files)} files to {download_dir}\")\n",
+    "    \n",
+    "    # Step 2: Process the PDFs with docling\n",
+    "    # Setup docling components\n",
+    "    pipeline_options = PdfPipelineOptions()\n",
+    "    pipeline_options.generate_picture_images = True\n",
+    "    converter = DocumentConverter(\n",
+    "                format_options={\n",
+    "                    InputFormat.PDF: PdfFormatOption(pipeline_options=pipeline_options)\n",
+    "                }\n",
+    "    )\n",
+    "    chunker = HybridChunker()\n",
+    "    llama_documents = []\n",
+    "    i = 0\n",
+    "    \n",
+    "    # Process each file with docling (chunking)\n",
+    "    for file_path in downloaded_files:\n",
+    "        if not file_path.endswith(\".pdf\"):\n",
+    "            print(f\"Skipping non-PDF file: {file_path}\")\n",
     "            continue\n",
-    "        full_path = os.path.join(download_dir, filename)\n",
-    "        full_text = \"\"\n",
-    "        with pdfplumber.open(full_path) as pdf:\n",
-    "            for page in pdf.pages:\n",
-    "                page_text = page.extract_text()\n",
-    "                if page_text:\n",
-    "                    full_text += page_text\n",
-    "        full_text = full_text.encode(\"utf-8\", \"ignore\").decode(\"utf-8\").replace(\"\\x00\", \"\")\n",
-    "        if not full_text.strip():\n",
-    "            continue\n",
-    "        rag_documents.append(\n",
-    "            RAGDocument(\n",
-    "                document_id=f\"pdf-{rng.integers(1000, 9999)}\",\n",
-    "                content=full_text,\n",
-    "                mime_type=\"application/pdf\",\n",
-    "                metadata={\"source\": \"rag-pipeline\", \"filename\": filename}\n",
-    "            )\n",
-    "        )\n",
+    "            \n",
+    "        print(f\"Processing {file_path} with docling...\")\n",
+    "        try:\n",
+    "            docling_doc = converter.convert(source=file_path).document\n",
+    "            chunks = chunker.chunk(docling_doc)\n",
+    "            chunk_count = 0\n",
     "\n",
+    "            for chunk in chunks:\n",
+    "                if any(\n",
+    "                    c.label in [DocItemLabel.TEXT, DocItemLabel.PARAGRAPH]\n",
+    "                    for c in chunk.meta.doc_items\n",
+    "                ):\n",
+    "                    i += 1\n",
+    "                    chunk_count += 1\n",
+    "                    llama_documents.append(\n",
+    "                        LlamaStackDocument(\n",
+    "                            document_id=f\"doc-{i}\",\n",
+    "                            content=chunk.text,\n",
+    "                            mime_type=\"text/plain\",\n",
+    "                            metadata={\"source\": os.path.basename(file_path)},\n",
+    "                        )\n",
+    "                    )\n",
+    "            \n",
+    "            print(f\"Created {chunk_count} chunks from {file_path}\")\n",
+    "            \n",
+    "        except Exception as e:\n",
+    "            error_message = str(e)\n",
+    "            print(f\"Error processing {file_path}: {error_message}\")\n",
+    "\n",
+    "    total_chunks = len(llama_documents)\n",
+    "    print(f\"Total valid chunks prepared: {total_chunks}\")\n",
+    "    \n",
+    "    # Step 3: Register vector database and store chunks with embeddings\n",
     "    client = LlamaStackClient(base_url=llamastack_base_url)\n",
     "    print(\"Registering db\")\n",
-    "    client.vector_dbs.register(\n",
-    "        vector_db_id=\"test\",\n",
-    "        embedding_model=\"all-MiniLM-L6-v2\",\n",
-    "        embedding_dimension=384,\n",
-    "        provider_id=\"pgvector\",\n",
-    "    )\n",
+    "    try:\n",
+    "        client.vector_dbs.register(\n",
+    "            vector_db_id=\"test\",\n",
+    "            embedding_model=\"all-MiniLM-L6-v2\",\n",
+    "            embedding_dimension=384,\n",
+    "            provider_id=\"pgvector\",\n",
+    "        )\n",
+    "        print(\"Vector DB registered successfully\")\n",
+    "    except Exception as e:\n",
+    "        error_message = str(e)\n",
+    "        print(f\"Failed to register vector DB: {error_message}\")\n",
+    "        print(\"Continuing with insertion...\")\n",
     "\n",
     "    try:\n",
+    "        print(f\"Inserting {total_chunks} chunks into vector database\")\n",
     "        client.tool_runtime.rag_tool.insert(\n",
-    "            documents=rag_documents,\n",
+    "            documents=llama_documents,\n",
     "            vector_db_id=\"test\",\n",
-    "            chunk_size_in_tokens=1000,\n",
+    "            chunk_size_in_tokens=512,\n",
     "        )\n",
+    "        print(\"Documents successfully inserted into the vector DB\")\n",
     "    except Exception as e:\n",
     "        print(\"Embedding insert failed:\", e)\n",
     "\n",
     "\n",
-    "@pipeline(name=\"fetch-and-store-pipeline\")\n",
+    "@pipeline(name=\"fetch-docling-process-store-pipeline\")\n",
     "def full_pipeline():\n",
     "    import os\n",
     "    \n",
-    "    fetch_from_minio_store_pgvector(\n",
+    "    fetch_from_minio_docling_process_store(\n",
     "        bucket_name=\"llama\", \n",
     "        minio_endpoint=os.environ[\"MINIO_ENDPOINT\"], \n",
     "        minio_access_key=os.environ[\"MINIO_ACCESS_KEY\"], \n",
@@ -183,7 +228,7 @@
     "    )\n",
     "\n",
     "# 1. Compile pipeline to a file\n",
-    "pipeline_yaml = \"fetch_chunk_embed_pipeline.yaml\"\n",
+    "pipeline_yaml = \"fetch_docling_process_pipeline.yaml\"\n",
     "compiler.Compiler().compile(\n",
     "    pipeline_func=full_pipeline,\n",
     "    package_path=pipeline_yaml\n",
@@ -199,14 +244,14 @@
     "# 3. Upload pipeline\n",
     "uploaded_pipeline = client.upload_pipeline(\n",
     "    pipeline_package_path=pipeline_yaml,\n",
-    "    pipeline_name=\"fetch-and-store-pipeline\"\n",
+    "    pipeline_name=\"fetch-docling-process-store-pipeline\"\n",
     ")\n",
     "\n",
     "# 4. Run the pipeline\n",
     "run = client.create_run_from_pipeline_package(\n",
     "    pipeline_file=pipeline_yaml,\n",
     "    arguments={},\n",
-    "    run_name=\"fetch-store-run\"\n",
+    "    run_name=\"fetch-docling-process-store-run\"\n",
     ")\n",
     "\n",
     "print(f\"Pipeline submitted! Run ID: {run.run_id}\")\n"
